--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <section class="plants">
     <h2><span>Our</span> Plants</h2>
     <div class="text">
-       <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From </p> 
-      <p>
+       <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From 
+      <br>
       classic roses to exotic blooms, we offer a wide variety of fresh plants that are perfect for any occasion.
       </p>
     </div>
@@ -90,16 +90,28 @@
   </section>
 
   <section class="flower-lover">
-    <img src="https://i.ibb.co/z7Rm9M0/plant-lovers.jpg" alt="Plant Lover" />
-    <div class="text">
-      <div class="badge">🌿 100% Organic</div>
-      <h2>Flower & Plants Lover</h2>
-      <p>Discover our collection that satisfies the beauty and joy of plants. Fresh flowers and lush green indoor plants for your everyday mood.</p>
+    <div class="lover">
+      <img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt="Plant Lover" style="height: 540px; width: 510px;">
+      <img src="./B12A02-Responsive-Flowers/assets/trusted-badge.png" alt="" srcset=""   style="height: 286px; width: 286px;" class="trusted-badge">
     </div>
+    <div class="plant-lover">
+ <h2>Flower & Plants  <br> Lover</h2>
+  <ul>
+    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+  </ul>
+    </div>
+    
   </section>
 
-  <section class="deals">
-    <h2><span>Latest</span> Deals</h2>
+
+
+<div class="deals">
+<h2><span>Latest</span> Deals</h2>
+      <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+</div>
+  <section class="deals-section">
     <div class="deals-grid">
       <img src="https://i.ibb.co/QKN1pTz/flower-deal-1.jpg" alt="Deal 1" />
       <div class="deal-card">
