--- a/index.html
+++ b/index.html
@@ -109,16 +109,29 @@
 
 <div class="deals">
 <h2><span>Latest</span> Deals</h2>
-      <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+      <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 </div>
   <section class="deals-section">
-    <div class="deals-grid">
-      <img src="https://i.ibb.co/QKN1pTz/flower-deal-1.jpg" alt="Deal 1" />
-      <div class="deal-card">
-        <h3>25% Off | Zabo Plant</h3>
+    <div class="deals-1">
+      <div class="shop">
+         <h3>25% Off | Zabo Plant</h3>
+        <p>Shop Now</p>
+      </div>
+       
+    </div>
+    <div class="deals-3">
+        <div class="shop">
+         <h3>25% Off | Zabo Plant</h3>
         <p>Shop Now</p>
       </div>
     </div>
+    <div class="deals-2">
+        <div class="shop1">
+         <h3>25% Off | Zabo Plant</h3>
+        <p>Shop Now</p>
+      </div>
+    </div>
+    
   </section>
 
   <section class="cta">
