--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <section class="flower-lover">
     <div class="lover">
-      <img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt="Plant Lover" style="height: 540px; width: 510px;">
+      <img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt="Plant Lover"  class="lover-image">
       <img src="./B12A02-Responsive-Flowers/assets/trusted-badge.png" alt="" srcset=""   style="height: 286px; width: 286px;" class="trusted-badge">
     </div>
     <div class="plant-lover">
@@ -135,13 +135,46 @@
   </section>
 
   <section class="cta">
-    <h2>Join the colorful <span>Bunch</span></h2>
-    <button>Subscribe Now</button>
+    <div class="cta-text">
+    <h2>Join the colorful Bunch</h2>
+    <form action="">
+      <input type="text" name="search" id="" placeholder="Enter your email address" >
+      <button>Subscribe</button>
+    </form>
+    </div>
   </section>
 
-  <footer>
-    <p>© 2025 Florky | All rights reserved</p>
-  </footer>
+  <div class="footer">
+    <div class="logo">
+      <img src="./B12A02-Responsive-Flowers/assets/logo.png" alt="logo" style="height: 82px; width:135px;">
+      <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+    </div>
+    <div class="footer-links">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Contact us</a></li>
+      </ul>
+      </div>
+      <div class="footer-feature">
+        <ul>
+          <li><a href="#">Flower Delivery</a></li>
+          <li><a href="#">Gift Cards</a></li>
+          <li><a href="#">Special Offers</a></li>
+          <li><a href="#">Customer Support</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+      
+    <div class="social-media">
+      <a href="#"><img src="./B12A02-Responsive-Flowers/assets/icon-facebook.png" alt="Facebook" ></a>
+      <a href="#"><img src="./B12A02-Responsive-Flowers/assets/icon-youtube.png" alt="Instagram" ></a>
+      <a href="#"><img src="./B12A02-Responsive-Flowers/assets/icon-twitter.png" alt="Twitter" ></a>
+      <a href="#"><img src="./B12A02-Responsive-Flowers/assets/icon-linkedin.png" alt="LinkedIn" ></a>
+    </div>
+  </div>
 
 </body>
 </html>
