--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <div class="logo"><img src="./B12A02-Responsive-Flowers/assets/logo.png" alt="logo" style="height: 82px; width:135px;"></div>
+    <div class="logo"><img src="./B12A02-Responsive-Flowers/assets/logo.png" alt="logo"></div>
     <div class="nav">
  
       <a href="#">Home</a>
